@@ -30,7 +30,7 @@
  * version info
  * ---------------------------------- */
 static const char man_version[] = "11.64";
-static const char man_date[] = "August 2019";
+static const char man_date[] = "September 2019";
 
 /* ----------------------------------
  * definitions
